--- a/index.html
+++ b/index.html
@@ -60,6 +60,16 @@
                                 <select id="type-filter" class="form-control">
                                     <option value="">Todos los tipos</option>
                                     <option value="research-article">Artículo de Investigación</option>
+                                    <option value="review-article">Artículo de Revisión</option>
+                                    <option value="correction">Corrección</option>
+                                    <option value="letter">Carta</option>
+                                    <option value="brief-report">Informe Breve</option>
+                                    <option value="reply">Respuesta</option>
+                                    <option value="editorial">Editorial</option>
+                                    <option value="article-commentary">Comentario de Artículo</option>
+                                    <option value="other">Otro</option>
+                                    <option value="methods-article">Articulos de Método</option>
+                                    <option value="discussion">Discusiones</option>
                                 </select>
                             </div>
                             
